Update membership button link to note.com membership page

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ Maker's
 <li class="flex items-center gap-2"><span class="material-symbols-outlined text-green-500">check_circle</span> <span>基礎講座の動画を配信</span></li>
 <li class="flex items-center gap-2"><span class="material-symbols-outlined text-green-500">check_circle</span> <span>メンバー限定NOTE配信</span></li>
 </ul>
-<a href="https://lin.ee/s2GDMUp" target="_blank" rel="noopener noreferrer" class="mt-4 flex w-full cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-primary text-white text-base font-bold leading-normal tracking-[0.015em] hover:opacity-90 transition-opacity">
+<a href="https://note.com/torame_craft/membership" target="_blank" rel="noopener noreferrer" class="mt-4 flex w-full cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-primary text-white text-base font-bold leading-normal tracking-[0.015em] hover:opacity-90 transition-opacity">
 メンバーになる
 </a>
 </div>
