Summarize B-san testimonial to half volume

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ Maker's
 <h4 class="font-bold text-gray-900 dark:text-white">Bさん</h4>
 </div>
 </div>
-<p class="text-gray-600 dark:text-gray-300 leading-relaxed">ツールに全く触れたことがないレベルの初心者には、画面共有で実際の操作画面を見ながら教えてもらえるのはとても助かると思いました。画像生成はchatGPTでちょっとやってたくらい、、、と言う人にはミッドジャーニーの初期操作や設定は挫折ポイントになりそうだと感じたので、その部分をフォローしてもらえたら、やってみたい！と思った熱量を失うことなく先に進めそうだなと思います。クラフトさんの人柄を知っているので、かなり初歩的なことを聞いたとしても呆れたりせず丁寧に教えてくれると信頼があります。自分で調べておけよ、、、レベルのこともきちんと教えてもらえたのがありがたかったです。他の方に気を使わずに参加できるという意味も込みでマンツーマン対応が良いかなと言う気持ちもあったのですが、他の方の質問から知ることもたくさんあるなと思ったので今回のような数人でのやり取りもいいなと感じました。</p>
+<p class="text-gray-600 dark:text-gray-300 leading-relaxed">画面共有で実際の操作画面を見ながら教えてもらえるのはとても助かりました。初心者には挫折ポイントになりそうな部分も丁寧にフォローしてもらえて、やってみたい！という熱量を失わず先に進めました。初歩的なことでも呆れずに教えてくれる信頼感があり、他の方の質問から学ぶこともたくさんあって、グループでのやり取りも良いなと感じました。</p>
 </div>
 </div>
 </section>
