--- a/index.html
+++ b/index.html
@@ -227,6 +227,32 @@ Maker's
 </div>
 </div>
 </section>
+<section class="px-4 py-10" id="student-works">
+<div class="flex flex-col gap-4 text-center items-center mb-10">
+<h2 class="text-gray-900 dark:text-white text-[32px] font-bold leading-tight @[480px]:text-4xl max-w-[720px]">
+受講生の作品
+</h2>
+<p class="text-gray-600 dark:text-gray-400 text-base font-normal leading-normal max-w-[720px]">
+クラフトで学んだ受講生が生み出した素敵な作品をご紹介します
+</p>
+</div>
+<div class="grid grid-cols-1 md:grid-cols-2 gap-6 sm:gap-8 max-w-5xl mx-auto">
+<div class="flex flex-col gap-4 rounded-xl border border-gray-200 dark:border-gray-800 bg-white dark:bg-background-dark overflow-hidden">
+<div class="bg-cover bg-center aspect-[4/5]" style='background-image: url("https://page.gensparksite.com/v1/base64_upload/61c0e570e7f0a4afda6b6b56631f0c4f");'></div>
+<div class="px-6 pb-6">
+<h4 class="font-bold text-gray-900 dark:text-white text-lg mb-2">水中の世界</h4>
+<p class="text-gray-600 dark:text-gray-400 text-sm">ヴィンテージ風のイラストレーションスタイルで描かれた、魚たちと少女の幻想的な作品</p>
+</div>
+</div>
+<div class="flex flex-col gap-4 rounded-xl border border-gray-200 dark:border-gray-800 bg-white dark:bg-background-dark overflow-hidden">
+<div class="bg-cover bg-center aspect-[4/5]" style='background-image: url("https://page.gensparksite.com/v1/base64_upload/9e6d2c503ed998c4f0b291770dd345a6");'></div>
+<div class="px-6 pb-6">
+<h4 class="font-bold text-gray-900 dark:text-white text-lg mb-2">音楽と魚</h4>
+<p class="text-gray-600 dark:text-gray-400 text-sm">レトロな手描きタッチで表現された、ヘッドフォンをした少女と魚たちの癒しの世界</p>
+</div>
+</div>
+</div>
+</section>
 <section class="px-4 py-10" id="pricing">
 <div class="flex flex-col gap-4 text-center items-center mb-10">
 <h2 class="text-gray-900 dark:text-white text-[32px] font-bold leading-tight @[480px]:text-4xl max-w-[720px]">
